--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "del": "^3.0.0",
     "eslint": "^4.15.0",
     "eslint-plugin-import": "^2.8.0",
-    "gulp": "gulp@next",
+    "gulp": "gulpjs/gulp#v4.0.0-alpha.3",
     "gulp-csscomb": "^3.0.8",
     "gulp-csso": "^3.0.1",
     "gulp-if": "^2.0.2",
