--- a/package.json
+++ b/package.json
@@ -34,20 +34,20 @@
   },
   "main": "gulpfile.js",
   "devDependencies": {
-    "autoprefixer": "^7.2.4",
+    "autoprefixer": "^7.2.5",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
-    "browser-sync": "^2.23.5",
+    "browser-sync": "^2.23.6",
     "colors": "^1.1.2",
     "cross-env": "^5.1.3",
     "del": "^3.0.0",
-    "eslint": "^4.15.0",
+    "eslint": "^4.16.0",
     "eslint-plugin-import": "^2.8.0",
-    "gulp": "gulpjs/gulp#v4.0.0-alpha.3",
+    "gulp": "gulp@next",
     "gulp-csscomb": "^3.0.8",
     "gulp-csso": "^3.0.1",
     "gulp-if": "^2.0.2",
@@ -55,13 +55,13 @@
     "gulp-merge-media-queries": "^0.2.1",
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^7.0.1",
-    "gulp-posthtml": "^3.0.2",
+    "gulp-posthtml": "^3.0.4",
     "gulp-prettify": "0.5.0",
     "gulp-pug": "^3.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sass-glob": "^1.0.8",
-    "gulp-sourcemaps": "^2.6.3",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-zip": "^4.1.0",
     "gulp-file": "^0.4.0",
     "imagemin-jpeg-recompress": "^5.1.0",
