--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
   "main": "gulpfile.js",
   "devDependencies": {
     "autoprefixer": "^7.2.5",
-    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-register": "^6.26.0",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
