--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
         "del": "^3.0.0",
         "eslint": "^4.19.1",
         "eslint-plugin-import": "^2.12.0",
-        "gulp": "gulp@next",
+        "gulp": "4.0.0",
         "gulp-csscomb": "^3.0.8",
         "gulp-csso": "^3.0.1",
         "gulp-if": "^2.0.2",
