--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "del": "^3.0.0",
         "eslint": "^4.19.1",
         "eslint-plugin-import": "^2.12.0",
+        "expose-loader": "^0.7.5",
         "gulp": "4.0.0",
         "gulp-csscomb": "^3.0.8",
         "gulp-csso": "^3.0.1",
@@ -73,6 +74,9 @@
         "webpack": "^4.8.3",
         "webpack-stream": "^4.0.3",
         "jstransformer-ejs": "^0.2.0"
+    },
+    "dependencies": {
+        "jquery": "^3.3.1"
     },
     "extends": ".pug-lintrc"
 }
