--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
         "jstransformer-ejs": "^0.2.0"
     },
     "dependencies": {
-        "jquery": "^3.3.1"
+        "jquery": "^3.3.1",
+        "slick-carousel": "^1.8.1"
     },
     "extends": ".pug-lintrc"
 }
